--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <a href="terms.html" class="link-button" target="_blank" style="border-color:#ffc300;color:#ffc300;">⚖️ Terms / Legal Notice</a>
     </div>
   </div>
-
+<!-- Force redeploy 2025-11-14 -->
   <footer>
     <h2>📜 Intellectual & Soul-Based Copyright Declaration</h2>
     <p>
