--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
       <a href="./log/observer.html" class="link-button" target="_blank">🛰️ Observer Log</a>
       <a href="gpt_boundary.html" class="link-button" target="_blank">🧠 The Boundary Between AI and Soul</a>
       <a href="external_validation.md" class="link-button" target="_blank">🔍 External Validation</a>
+      <a href="AI_Independent_Replication_Log.md" class="link-button" target="_blank">
+  🔍 Independent Replication Log
+</a>
       <a href="terms.html" class="link-button" target="_blank" style="border-color:#ffc300;color:#ffc300;">⚖️ Terms / Legal Notice</a>
     </div>
   </div>
